Fixed bug where the email form may get stuck

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -33,6 +33,16 @@ body {
 	color: #fff;
 }
 
+.logo {
+  width: 50%;
+  padding-bottom: 140px;
+
+  @media (min-width: $tablet) {
+    width: auto;
+    padding-bottom: 0px;
+  }
+}
+
 //
 // Typography
 //
@@ -69,7 +79,7 @@ body {
   display: flex;
   flex-direction: column;
 
-  padding: 25px 0 0;
+  padding: 25px 0 25px;
 
   @media (min-height: 800px){
     padding: 50px 0 25px;
@@ -172,7 +182,7 @@ body {
 
 .teaser {
   @extend %heading-bold;
-  font-size: 30px;
+  font-size: 20px;
 
   @media (min-width: $tablet ){
     font-size: 3vw;
@@ -185,8 +195,8 @@ body {
 
 .hero-text {
   @extend %heading-light;
-  font-size: 50px;
-  line-height: 50px;
+  font-size: 35px;
+  line-height: 35px;
 
   text-transform: capitalize;
   margin: 0;
@@ -210,8 +220,12 @@ body {
 
 .emailForm {
   @extend %clearfix;
-  margin-top: 40px;
+  margin-top: 30px;
   position: relative;
+
+  @media (min-width: $tablet){
+    margin-top: 40px;
+  }
 }
 
 .input__wrapper {
@@ -225,9 +239,9 @@ body {
   @extend %body-light;
   font-size: 20px;
   color: $input-color;
-  margin-bottom: 25px;
 
   border-radius: 4px;
+  margin-bottom: 15px;
 
   @media (min-width: 992px) {
     width: 49%;
@@ -244,12 +258,16 @@ body {
 .input {
   background-color: transparent;
   line-height: normal;
-  height: 75px;
+  height: 50px;
   padding-left: 2em;
   float: right;
   border: none;
   width: 100%;
   outline: none;
+
+  @media (min-width: $tablet){
+    height: 75px;
+  }
 }
 
 .input::placeholder {
@@ -259,10 +277,14 @@ body {
 .input__label {
   position: absolute;
   top: 0;
-  line-height: 75px;
+  line-height: 50px;
   width: 100%;
   text-align: left;
   overflow: hidden;
+
+  @media (min-width: $tablet){
+    line-height: 75px;
+  }
 }
 
 
@@ -312,7 +334,7 @@ body {
 }
 
 .submitButton {
-  height: 75px;
+  height: 50px;
   position: relative;
   color: transparent;
   text-transform: uppercase;
@@ -326,6 +348,10 @@ body {
   border-radius: 4px;
 
   width: 100%;
+
+  @media (min-width: $tablet){
+    height: 75px;
+  }
 
   @media (min-width: 992px) {
     width: 49%;
@@ -342,7 +368,10 @@ body {
     width: 100%;
     left: 0;
     top: 0;
-    line-height: 75px;
+    bottom: 0;
+    margin: auto;
+    line-height: 1px;
+    height: 1px;
     text-align: center;
 
     animation-fill-mode: forwards;
@@ -392,8 +421,14 @@ body {
 .article__heading {
   @extend %heading-light;
   color: $gold;
-  font-size: 40px;
-  margin: 0;
+  font-size: 35px;
+  line-height: 1em;
+  margin: 20px 0;
+
+  @media (min-width: $tablet) {
+    margin: 0;
+    font-size: 40px;
+  }
 }
 
 .article__body {
